✨ added a movie set export engine
fixes #1928